# nohead-dx

./: Cargo.toml  README.md
app/: Cargo.toml
config/: Cargo.toml
config/environments/: development.toml  production.toml  staging.toml  test.toml
config/src/: lib.rs
server/: Cargo.toml
server/src/db/: mod.rs
server/src/db/queries/: mod.rs  todo.rs
shared/: Cargo.toml
shared/src/entities/: todo.rs
web/: Cargo.toml
web/src/: main.rs
